2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* cmd_ws_commit.cc (checkout): Improve error messages.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (sanity): Move 'brief' from here...
	* app_state.cc (app_state): ...to here, with the rest of the
	options.
	* monotone.cc, cmd_diff_log.cc: Adjust accordingly.
	* cmd_files.cc (annotate): 
	* annotate.cc (do_annotate): Take the brief option from outside,
	instead of accessing the global from deep in the middle of
	annotate.
	
	No behavioral changes in this commit.
	
2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc: Remove tabs.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* annotate.cc: Remove tabs.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* restrictions.cc (includes): Don't log what's going on when we
	have a totally unrestricted mask; it's taking several percent of
	cpu time.

2006-08-21  Matt Johnston  <matt@ucc.asn.au>

	* debian/control: add libboost-program-options-dev to build dependencies

2006-08-20  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST): Remove a trailing comma to get a
	non-mangled directory layout for tester-tests/ in the distribution
	tarball.

2006-08-20  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Put in date.
	* INSTALL: Bump boost requirement to 1.33.1.

2006-08-21  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* cmd_merging.cc: Add includes and using std::* statements

2006-08-20  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Translated the last current untranslated string.

2006-08-20  Zack Weinberg  <zackw@panix.com>

	* tests/log_quits_on_SIGPIPE: Rewrite so it actually tests what we
	want it to (and hopefully is now race free).

2006-08-20  Thomas Moschny  <thomas.moschny@gmx.de>

	* contrib/monotone.zsh_completion: Revised completion for almost
	all commands, especially cat, co, diff, drop, log, propagate,
	status, and update. Updated list of subcommands for db, ls, and
	automate. Fixed indentation. Add author information.
