@@ -667,3 +667,4 @@ table.insert(tests, "restrictions_with_deletes")
 table.insert(tests, "log_with_restriction")
 table.insert(tests, "log_quits_on_SIGPIPE")
 table.insert(tests, "drop_directory_with_unversioned_files_and_merge")
+table.insert(tests, "checkout_-r_no_dir")
